--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 html,body {
     width: 100%;
     font-size: 16px;
-    background-color: lightblue;
+    background-color: black;
     color: antiquewhite;
   }
 h1{
