--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ html,body {
     width: 100%;
     font-size: 16px;
     background-color: black;
-    color: antiquewhite;
+    color: black;
   }
 h1{
     font-size: 250%;
